# SignalLedger

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  pnl-model.md  workflow.mmd
src/signalledger/: __init__.py  models.py
tests/: test_models.py
